--- a/public/FrontEnd/Css/StyleHomePage.css
+++ b/public/FrontEnd/Css/StyleHomePage.css
@@ -79,3 +79,10 @@ a{
 .link{
 	text-decoration: none;
 }
+.content_sidebar{
+	font-family: 'Manjari';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 19px;
+}
