--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    top: 0;
+    top: -2px;
     left: 3px;
     z-index: -1;
 }
@@ -47,5 +47,110 @@
 
 .sale-price span:first-child{
     text-decoration: line-through;
+}
+
+/* ---------------------------------------------mug  */
+
+.mug-link{
+    width: 79px;
+    height: 14px;
+    margin-top: 29px;
+    font-weight: 700;
+    line-height: 14px;
+    font-size: 12px;
+    margin-left: 10px;
+}
+
+.mug-banner{
+    margin-top: 17px;
+    margin-bottom: 20px;
+    width: 1295px;
+}
+
+.mug-btn{
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    text-transform: uppercase;
+    padding: 11px 12px 5px 17px;
+    background-color: white;
+    margin-right: 9px;
+    
+}
+
+.mug-btn img{
+    margin-left: 17px;
+}
+
+.element-item{
+    position: relative;
+    float: left;
+    margin-right: 16px;
+}
+
+.mug-product{
+    width: 246px;
+    position: relative;
+    margin-bottom: 39px;
+}
+
+.mug-product span{
+    font-size: 12px;
+}
+
+.mug-layer{
+    position: absolute;
+    top: -5px;
+}
+
+.mug-sticker{
+    position: absolute;
+    left: 13px;
+    bottom: 113px;
+}
+
+.mug-sticker img:first-child{
+    margin-top: 3px;
+    margin-right: 9px;
+}
+
+.mug-viewed{
+    margin-bottom: 64px;
+}
+
+.mug-viewed p{
+    width: 199px;
+    height: 27px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    margin-top: 68px;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+}
+
+.viewed-product{
+    height: 320px;
+    background-color: #D9D9D9;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.viewed-product img{
+    width: 232px;
+    height: 239px;
+    margin: 0 10px;
+}
+
+.viewed-product span{
+    position: absolute;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    right: 25px;
+    bottom: 20px;
 }
 
