--- a/public/FrontEnd/Css/StyleHomePage.css
+++ b/public/FrontEnd/Css/StyleHomePage.css
@@ -1,84 +1,170 @@
-body{
-	font-family: 'Manjari';
+.Header_Style {
+    margin-left: 0px;
+    margin-top: 0px;
+    height: 119px;
+    background: #D9D9D9;
+
 }
 
-a{
-	text-decoration: none;
-	color: black;
-}
-p{
-	margin: 0;
+.Bar_Menu {
+    margin-top: 71px;
+    margin-left: 96.04px;
 }
 
-.Header__First{
-	height: 80px;
-	background: #d9d9d9;
+.container {
+    width: 1440px;
+    height: 119px;
+    margin-left: 105px;
 }
 
-.logo{
-	position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+.Category {
+    margin-left: 25.575px;
 }
 
-.Bar__Tool{
-	margin-left: 32px;
+.Text_Category {
+    margin-left: 25.575px;
+    margin-top: 75px;
 }
-.Mug__CSS{
-	margin-left: 40.15px;
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 19px;
-	color: #000000;
+
+a {
+    text-decoration: none;
 }
-.T__Shirt{
-	margin-left: 20.15px;
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 19px;
-	color: #000000;
+
+.Logo {
+    margin-left: 137px;
+    margin-top: 52px;
 }
-.Search{
-	background: #ececec;
-	border-color: #ececec;
-	width: 156px;
-	height: 30px;
+
+.Search {
+    margin-left: 268px;
+    margin-top: 67px;
 }
-.icon_search{
-	margin-left: -28px;
+
+.Search_Input {
+    width: 156px;
+    height: 30px;
+    border-radius: 12px;
+    border: none;
 }
-.cart{
-	margin-left: 19px;
-	font-style: normal;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 16px;
-	color: #000000;
+
+.Search_Icon {
+    margin-left: -30px;
+    margin-top: 5px;
 }
-.cart_shippping {
+
+.Cart {
+    margin-left: 19px;
+    margin-top: 77px;
+}
+
+.Cart_Icon {
     margin-left: 6px;
-    margin-top: -10px;
-	margin-right: 32px;
+    margin-top: 61px;
 }
-.banner{
-	width: 1440px;
-	height: 569px;
-	margin-left: -12px;
+
+.Line {
+    width: 1px;
+    height: 22px;
+    margin-left: 9px;
+    margin-top: 71px;
 }
-.banner_img{
-	width: 1440px;
-	height: 569px;
-	margin-left: 0px;
-	margin-top: 6px;
+
+.Text {
+    width: 56px;
 }
-.link{
-	text-decoration: none;
+
+.Banner {
+    width: 100%;
 }
-.content_sidebar{
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 19px;
+
+/* response ipad*/
+@media only screen and (min-width: 601px) and (max-width: 900px) {
+    .container-fluid{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .banner_mobile{
+        display: none;
+    }
+    .Header_Style {
+        display: none;
+    }
+    .Header_Mobile {
+        display: none;
+    }
+    .Header_Ipad {
+        background: #D9D9D9;
+        height: 119px;
+        width: fit-content;
+    }
+
+    .Bar_Menu_Ipad {
+        margin-top: 71px;
+    }
+
+    .Category_Ipad {
+        margin-top: 75px;
+        margin-left: 5px;
+    }
+
+    .Text_Category_Ipad {
+        margin-left: 7px;
+    }
+
+    .Logo_Ipad {
+        margin-top: 52px;
+        margin-left: 19px;
+    }
+
+    .Search_Ipad {
+        margin-top: 67px;
+        margin-left: 14px;
+    }
+
+    .Search_Input_Ipad {
+        width: 156px;
+        height: 30px;
+        border-radius: 12px;
+        border: none;
+    }
+    .Banner_ipad{
+        width: 900px;
+    }
+    .Cart {
+        margin-left: 3px;
+        margin-top: 77px;
+    }
+
+}
+@media only screen and (min-width: 901px) {
+    .Header_Ipad {
+        display: none;
+    }
+    .Header_Mobile {
+        display: none;
+    }
+    .banner_ipad{
+        display: none;
+    }
+    .banner_mobile{
+        display: none;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .Header_Style {
+        display: none;
+    }
+    .Header_Ipad {
+        display: none;
+    }
+    .banner_ipad{
+        display: none;
+    }
+    .Header_Mobile{
+        background: #D9D9D9;
+        height: 119px;
+    }
+    .Banner_mobile{
+        width: 100%;
+    }
 }
