--- a/public/FrontEnd/Css/StyleHomePage.css
+++ b/public/FrontEnd/Css/StyleHomePage.css
@@ -5,7 +5,18 @@
     background: #D9D9D9;
 
 }
-
+.list_babel{
+    font-family: 'Manjari';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000;
+    text-align: center;
+}
+.Logo_sidebar{
+    align-content: center;
+}
 .Bar_Menu {
     margin-top: 71px;
     margin-left: 96.04px;
