--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,8 +11,8 @@
     padding: 20px 10px;
     border: none;
     background-color: #fff;
-    height: 90px;
-    width: 85px;
+    height: 120px;
+    width: 80px;
     font-size: 14px;
 }
 
@@ -21,6 +21,17 @@
     background-image: url("../FrontEnd/Image/mug.png");
     background-position: center 0;
     background-repeat: no-repeat;
+    animation: fadeIn 1s;
+    background-size: contain;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .button-group:after {
@@ -254,9 +265,11 @@
         width: 100%;
         margin-left: 0;
     }
-    .grid{
+
+    .grid {
         margin-left: 0;
     }
+
     .grid-item {
         width: 32%;
     }
@@ -265,24 +278,19 @@
         width: 100%;
     }
 
-    .about-main-img{
+    .about-main-img {
         width: 100%;
     }
+
     .about-side {
         margin-left: 0;
     }
 }
 
-@media screen and (max-width: 992px){
-    .img-sale-main{
+@media screen and (max-width: 992px) {
+    .img-sale-main {
         margin-bottom: 30px;
     }
 }
 
-@media screen and (max-width: 768px){
-    
-}
-
-
-
-
+@media screen and (max-width: 768px) {}
