--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Manjari';
+}
+
 .list-category ul li {
     list-style: none;
     text-transform: uppercase;
@@ -29,6 +33,7 @@
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
@@ -289,8 +294,21 @@
 
 @media screen and (max-width: 992px) {
     .img-sale-main {
-        margin-bottom: 30px;
+        display: none;
     }
 }
 
 @media screen and (max-width: 768px) {}
+
+
+@media screen and (max-width: 576px) {
+    .button {
+        height: 105px;
+        width: 70px;
+        margin: 0;
+        padding: 0;
+    }
+    .grid{
+        margin-left: 50px;
+    }
+}
