--- a/public/FrontEnd/Css/best-seller.css
+++ b/public/FrontEnd/Css/best-seller.css
@@ -27,8 +27,8 @@ p {
     font-weight: 700;
     font-size: 12px;
     line-height: 14px;
-    display: flex;
-    align-items: center;
+    /*display: flex;*/
+    /*align-items: center;*/
     text-align: justify;
     color: #000000;
 
@@ -54,21 +54,37 @@ p {
 }
 
 .carousel-cell {
-    width: 20%;
+    /*width: 20%;*/
     padding: 0 10px;
+
+    width: 50%;
+    /*margin-right: 10px;*/
+    counter-increment: gallery-cell;
 }
 
 .main-carousel .flickity-prev-next-button {
     top: 27%;
 }
 
+.regula-price{
+    font-size: 1em;
+}
+.sale-price{
+    font-size: 1.3em;
+    margin-left: 1.5em;
+    margin-top: 8px;
+}
+
+
+
+
 @media screen and (min-width: 0px) {
 
     /* half-width cells for larger devices */
-    .carousel-cell {
-        width: 100%;
-        padding: 0 25px;
-    }
+    /*.carousel-cell {*/
+    /*    width: 100%;*/
+    /*    padding: 0 25px;*/
+    /*}*/
 
     .main-carousel .flickity-prev-next-button {
         top: 34%;
@@ -92,22 +108,21 @@ p {
         font-family: 'Manjari';
         font-style: normal;
         font-weight: 700;
-        font-size: 23px;
-        line-height: 35px;
+        font-size: 1em;
     }
 
     .best_seller-price {
-        margin-top: 30px;
+        /*margin-top: 30px;*/
         display: flex
     }
 
     .best_seller-price p:first-child {
-        font-size: 23px;
+        font-size: 1em;
     }
-    
+
     .best_seller-price p:last-child {
-        padding-left: 28px;
-        font-size: 28px;
+        /*padding-left: 28px;*/
+        font-size: 1.3em;
     }
 
     .about p {
@@ -120,7 +135,7 @@ p {
         font-size: 25px;
         font-weight: 700;
     }
-    
+
 
     .about-img{
         margin-top: 20px;
@@ -242,10 +257,10 @@ p {
     .best_seller-price p:first-child {
         font-size: 20px;
     }
-    
+
     .best_seller-price p:last-child {
         padding-left: 28px;
-        font-size: 24px;
+        font-size: 1em;
     }
 
     .about-img-top p {
@@ -307,10 +322,7 @@ p {
         width: 20%;
     }
 
-    .best_seller-price p:first-child {
-        font-size: 17px;
-    }
-    
+
     .best_seller-price p:last-child {
         padding-left: 28px;
         font-size: 22px;
@@ -344,10 +356,11 @@ p {
 
 .best_seller_bottom {
     margin-top: 10px;
+    text-align: justify;
 }
 
 .best_seller-price {
-    margin-top: 30px;
+    margin-top: .5em;
     display: flex
 }
 
