--- a/public/css/style.css
+++ b/public/css/style.css
@@ -344,8 +344,11 @@
         margin-top: 15px;
     }
     .sale-price span{
-        font-size: 17px;
+        font-size: 14px;
         margin: 0;
+    }
+    .sale-price span:last-child{
+        font-size: 17px;
     }
     .sale-category{
         margin: 0 10px;
