--- a/public/FrontEnd/Css/main-details.css
+++ b/public/FrontEnd/Css/main-details.css
@@ -69,7 +69,7 @@
 }
 
 .footer-details{
-    padding-top: 60px;
+    padding-top: 40px;
     background-color: #ECECEC;
 }
 
@@ -95,7 +95,7 @@
     }
 
     .breadcrumb-main-details a, p{
-        font-size: 24px;
+        font-size: 1em;
     }
 
     .main-details-content-wrap span {
@@ -124,6 +124,14 @@
         color: white;
     }
 
+    .ft-bt >p{
+        font-size: 18px;
+    }
+
+    .ft-bt-right ul li a i {
+        font-size: 20px;
+    }
+
 }
 
 @media screen and (min-width: 768px) {
@@ -132,6 +140,18 @@
         margin: 10px 0;
         min-width: 150px;
         height: 150px;
+    }
+
+}
+
+@media screen and (min-width: 920px) {
+
+    .ft-bt >p{
+        font-size: 20px;
+    }
+
+    .ft-bt-right ul li a i {
+        font-size: 23px;
     }
 
 }
@@ -193,7 +213,7 @@
         color: white;
     }
     .breadcrumb-main-details a, p {
-        font-size: 20px;
+        /* font-size: 20px; */
 
     }
 
