--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,7 +129,7 @@ a {
 .mug-banner {
     margin-top: 17px;
     margin-bottom: 20px;
-    width: 1295px;
+    width: 100%;
 }
 
 .mug-btn {
@@ -152,7 +152,7 @@ a {
 .element-item {
     position: relative;
     float: left;
-    margin-right: 16px;
+    margin-right: 13px;
 }
 
 .mug-product {
@@ -312,6 +312,10 @@ a {
     .about-side {
         margin-left: 0;
     }
+    .element-item {
+        margin-right: 15px;
+        margin-left: 15px;
+    }
 }
 
 @media screen and (max-width: 992px) {
@@ -326,12 +330,16 @@ a {
         margin-left: 0;
         padding: 20px 15px;
     }
+    .button {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 
 @media screen and (max-width: 480px) {
     .button {
-        height: 105px;
+        height: 90px;
         margin: 0;
         padding: 0;
     }
@@ -349,7 +357,7 @@ a {
     }
 
     .button-group button {
-        font-size: 15px;
+        font-size: 14px;
         padding: 0 5px;
         font-weight: 700;
     }
