--- a/public/FrontEnd/Css/best-seller.css
+++ b/public/FrontEnd/Css/best-seller.css
@@ -89,7 +89,7 @@ p {
     }
 
     .main-carousel .flickity-prev-next-button {
-        top: 25%;
+        top: 22%;
     }
 
     .about-img-top p {
@@ -98,7 +98,7 @@ p {
         font-style: normal;
         font-weight: 700;
         color: #000000;
-        top: 31%;
+        top: 29%;
         left: 11%;
         text-align: center;
         line-height: 20px;
@@ -114,7 +114,7 @@ p {
         font-weight: 700;
         color: #000000;
         top: 42%;
-        left: 60%;
+        left: 61%;
         text-align: center;
         line-height: 20px;
         letter-spacing: 10px;
@@ -164,7 +164,7 @@ p {
     .about p {
         line-height: 35px;
         padding: 0px;
-        font-size: 1.3em;
+        font-size: 18px;
     }
 
     .about-l > h1 {
@@ -448,7 +448,7 @@ p {
     }
 
     .main-carousel .flickity-prev-next-button {
-        top: 27%;
+        top: 23%;
     }
 
     .ft-bt-left ul::before{
