--- a/public/FrontEnd/Css/main-details.css
+++ b/public/FrontEnd/Css/main-details.css
@@ -79,6 +79,12 @@
 
 @media screen and (min-width: 0px) {
 
+    .detail-content{
+        padding-top: 50px; 
+        background-color: white;
+        padding-bottom: 80px;
+    }
+
     .addToCart{
         font-size: 1.5em;
     }
@@ -144,6 +150,8 @@
         font-size: 20px;
     }
 
+    
+
 }
 
 @media screen and (min-width: 768px) {
@@ -173,7 +181,7 @@
 @media screen and (min-width: 1200px) {
 
     .main-details-content >li:last-child p{
-        line-height: 50px;
+        line-height: 35px;
     }
 
 
@@ -203,7 +211,7 @@
     .main-details-content-wrap p {
         margin-bottom: 0;
         display: block;
-        font-size: 22px;
+        font-size: 18px;
     }
 
     .breadcrumb-main-details a, p{
@@ -213,7 +221,7 @@
     .main-details-content-wrap span {
         font-weight: 700;
         font-size: 20px;
-        line-height: 48px;
+        line-height: 35px;
         text-align: justify;
         font-family: 'Manjari';
     }
