--- a/public/FrontEnd/Css/main-details.css
+++ b/public/FrontEnd/Css/main-details.css
@@ -249,3 +249,12 @@
     }
 
 }
+
+/* --------------------------------------Cart------------------------------------------- */
+/* .common-summary-detail .header >h2{
+    font-size: 20px;
+} */
+.content{
+    background-color: white;
+    padding-top: 20px;
+}
