--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,18 +170,29 @@ a {
 
 .mug-layer {
     position: absolute;
-    top: -5px;
+    top: -50px;
 }
 
 .mug-sticker {
     position: absolute;
     left: 15px;
-    bottom: 127px;
+    bottom: 10px;
+}
+
+.mug-img{
+    position: relative;
+    /* margin-top: 60px; */
 }
 
 .mug-sticker img:first-child {
     margin-top: 3px;
     margin-right: 9px;
+}
+
+.img-responsive{
+    width: 232px; 
+    height: 239px;
+    margin-left: 7px;
 }
 
 .mug-viewed {
@@ -200,7 +211,8 @@ a {
 }
 
 .viewed-product {
-    height: 320px;
+    flex-wrap: wrap;
+    padding: 40px;
     background-color: #D9D9D9;
     justify-content: center;
     align-items: center;
