--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,7 +228,7 @@ a {
 .viewed-product span {
     position: absolute;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 14px;
     right: 52px;
     bottom: 15px;
@@ -371,6 +371,14 @@ a {
     .viewed-product {
         padding: 20px 10px;
     } 
+    .viewed-product span {
+        position: absolute;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 14px;
+        right: 15px;
+        bottom: 2px;
+    }
    
 }
 @media screen and (max-width: 920px) {
@@ -394,7 +402,7 @@ a {
         font-weight: 700;
         font-size: 12px;
         line-height: 14px;
-        right: 15px;
+        right: 23px;
         bottom: 4px;
     }
     .viewed-product {
