--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,8 +142,14 @@ a {
     padding: 11px 12px 5px 17px;
     background-color: white;
     margin-right: 9px;
-
 }
+
+.all-product-filter{
+    height: fit-content; 
+    padding: 5px 10px; 
+    cursor: pointer;
+}
+
 
 .mug-btn img {
     margin-left: 17px;
